now renders circle, ellipse, and (P Q) to canvas

--- a/DemoGUI/egeditor.html
+++ b/DemoGUI/egeditor.html
@@ -15,7 +15,10 @@
 <form>
 	<label for="getRadius">Expression:</label>
 	<input id="getRadius" type="text" placeholder=" enter expression"/>
-	<input type="button" id="draw" value="Submit" onclick="drawCircle();"/>
+	<input type="button" id="draw" value="Circle" onclick="drawCircle();"/>
+	<input type="button" id="draw" value="Ellipse" onclick="drawEllipse();"/>
+	<input type="button" id="draw" value="P" onclick="drawP();"/>
+	<input type="button" id="draw" value="Q" onclick="drawQ();"/>
 	<input type="button" id="clear" value="Clear" onclick="clearArea();"/>
 	<br>
 	<canvas id="myCanvas"></canvas>
