Updated the example app.

--- a/App_Example/index.htm
+++ b/App_Example/index.htm
@@ -13,7 +13,7 @@
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     
     <!--Supporting CSS -->
-    <link rel="stylesheet" type="text/css" href="./view/styles.css"/>
+    <link rel="stylesheet" type="text/css" href="./support_css/styles.css"/>
     <link rel="stylesheet" href="./support_js/bootstrap/bootstrap.css"/>
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="./support_css/joint.css" />
