OK fixed the Linux problem. Basically all naming conventions must be case sensitive or else cross platform will be a no go. egAssertion.js was EGAssertion.js in the <script> link when the actual file was egAssertion. Linux is case sensitive...

--- a/App_Example/index.htm
+++ b/App_Example/index.htm
@@ -22,7 +22,7 @@
     <script src="./js/EG_view.js"></script>
     <script src="./js/EG_model.js"></script>
     <script src="./js/EG_controller.js"></script>
-    <script src="./js/EGAssertionClass.js"></script>
+    <script src="./js/egAssertionClass.js"></script>
     
 </head>
 <body>
