--- a/App_Example/index.htm
+++ b/App_Example/index.htm
@@ -205,7 +205,7 @@
             </div>
             <div class="modal-body">
                 Enter Character:
-                <input id="NewAssertionValue" type="text" name="addChar" autofocus /><br>
+                <input id="NewAssertionValue" type="text" name="addChar" /><br>
 
             </div>
             <div class="modal-footer">
@@ -232,7 +232,7 @@
     // Wire-up event handler to the button.
     document.getElementById("AddNegatedAssertionButton").onclick = function(){view.addNegatedAssertion(document.getElementById("NewNegatedAssertionValue").value);
         document.getElementById("NewNegatedAssertionValue").value="";document.getElementById("NewNegatedAssertionValue").focus();
-        $('#myModal').on('shown.bs.modal', function () {
+        $('#myModal2').on('shown.bs.modal', function () {
             $('#NewNegatedAssertionValue').focus();
         });
 
