Added ability to clear the EG and made the button able to do it.

--- a/App_Example/index.htm
+++ b/App_Example/index.htm
@@ -249,6 +249,10 @@
     function clearInput(input){
         input.value="";
     }
+    function clearArea()
+    {
+        view.EGclear();
+    };
 
 
 </script>
