Made rebuild output correctly, added syntax
The new "syntax.js" gets the string that the user inputs first, and
translates loose syntax into our rigid syntax.

--- a/App_Example/index.htm
+++ b/App_Example/index.htm
@@ -25,6 +25,7 @@
     <script src="./js/egAssertionClass.js"></script>
     <script src="./js/parser.js"></script>
     <script src="./js/validator.js"></script>
+    <script src="./js/syntax.js"></script>
 
 </head>
 <body>
