--- a/App_Example/index.htm
+++ b/App_Example/index.htm
@@ -263,7 +263,7 @@
     {
         view.EGclear();
        if(document.getElementById("drawType").value != null)
-        model.Rebuild(model.check_expression(document.getElementById("drawType").value));
+        model.Rebuild(view.check_expression(document.getElementById("drawType").value));
     }
     function UpdateFill()
     {
