--- a/App_Example/index.htm
+++ b/App_Example/index.htm
@@ -91,10 +91,12 @@
         <input id="drawType" type="text" class="form-control" placeholder="enter expression" aria-describedby="basic-addon2" onclick="return change_to_black();">
         <span  class="input-group-addon" id="drawC" onclick="return OnClickDraw();">Submit</span>
         <span  class="input-group-addon" id="clear" onclick="return clearArea();">Clear</span>
-        <span  class="input-group-addon" id="save">Save</span>
-        <!--img class="uahImg" src="../images/uahLogo.png"-->
+        <span  class="input-group-addon" id="save">Save</span> 
     </div>
-
+	<!--<div>
+		<input id="testt" type="text" class="checkbox" placeholder="error" aria-describedby="">
+	</div>-->
+	
 </form>
 <br>
 <p></p>
@@ -257,13 +259,15 @@
     }
     function  OnClickDraw()
     {
-        view.EGclear();
+	  
+       view.EGclear();
        if(document.getElementById("drawType").value != null)
-        model.check_expression(document.getElementById("drawType").value);
+       view.check_expression(document.getElementById("drawType").value);
     } 
-
-    function change_to_black(){ document.getElementById("drawType").style.color="black";}
 	
+	function change_to_black(){ document.getElementById("drawType").style.color="black";}
+	
+
 
 </script>
 
