--- a/App_Example/index.htm
+++ b/App_Example/index.htm
@@ -125,7 +125,7 @@
                 <button type="button" class="btn btn-info">Specialize (Negative Context)</button>
                 <button type="button" class="btn btn-info">Generalize (Positive Context)</button>
                 <button type="button" class="btn btn-info">Copy (Sub-Graph)</button>
-                <button type="button" class="btn btn-info">Remove (Sub-Graph)</button>
+                <button type="button" class="btn btn-info" id="removeSubGraph">Remove (Sub-Graph)</button>
                 <button type="button" class="btn btn-info">2X Negative (Sub-Graph)</button>
                 <button type="button" class="btn btn-info">Remove 2X (From Sub-Graph)</button>
             </div>
@@ -262,6 +262,10 @@
         $('#myModal2').on('shown.bs.modal', function () {
             $('#NewAssertionValue').focus();
         });
+    }
+
+    document.getElementById("removeSubGraph").onclick = function(){
+        view.removeCell()
     }
 
     function clearInput(input)
