--- a/App_Example/index.htm
+++ b/App_Example/index.htm
@@ -97,6 +97,11 @@
 	<!--<div>
 		<input id="testt" type="text" class="checkbox" placeholder="error" aria-describedby="">
 	</div>-->
+	<div>
+	<section>
+        <textarea id=submit_error readonly rows="1" cols="65"></textarea>
+    </section>
+	</div>
 	
 </form>
 <br>
@@ -273,7 +278,10 @@
           model.Rebuild(view.check_expression(document.getElementById("drawType").value));
     }
 	
-	function change_to_black(){ document.getElementById("drawType").style.color="black";}
+	function change_to_black(){
+		document.getElementById("drawType").style.color="black";
+		document.getElementById("submit_error").value = "";
+	}
 	
     window.onerror = function(msg,url,lineNo,columnNo,error){
         //msg = msg.toLowerCase();
@@ -283,6 +291,10 @@
     function throwError(msg){
         document.getElementById("console").value += msg + "\n";
     }
+    
+    function error_submit(msg){
+			document.getElementById("submit_error").value += msg + "\n";
+ 	}
 
 </script>
 
