Added 3 class model
Started to convert things to function properly within the 3 class
version.

--- a/App_Example/index.htm
+++ b/App_Example/index.htm
@@ -22,7 +22,9 @@
     <script src="./js/EG_view.js"></script>
     <script src="./js/EG_model.js"></script>
     <script src="./js/EG_controller.js"></script>
-    <script src="./js/egAssertionClass.js"></script>
+    <script src="./js/egAssertion.js"></script>
+    <script src="./js/egSheet.js"></script>
+    <script src="./js/egContext.js"></script>
     <script src="./js/parser.js"></script>
     <script src="./js/validator.js"></script>
     <script src="./js/syntax.js"></script>
