--- a/App_Example/index.htm
+++ b/App_Example/index.htm
@@ -268,14 +268,15 @@
     {
         input.value="";
     }
+    
     function clearArea()
     {
         view.EGclear();
-        UpdateFill();
+        //UpdateFill();
     }
+
     function  OnClickDraw()
     {
-	  
        view.EGclear();
        if(document.getElementById("drawType").value != null)
           model.Rebuild(view.check_expression(document.getElementById("drawType").value));
@@ -287,7 +288,6 @@
 	}
 	
     window.onerror = function(msg,url,lineNo,columnNo,error){
-        //msg = msg.toLowerCase();
         document.getElementById("console").value += msg + " in " + url + ", Line " + lineNo + ", Col " + columnNo + "\n";
     };
 
