Finished the ability to nest within the view
now that the selection is working.

--- a/App_Example/index.htm
+++ b/App_Example/index.htm
@@ -280,7 +280,7 @@
 	  
        view.EGclear();
        if(document.getElementById("drawType").value != null)
-          model.Rebuild(view.check_expression(document.getElementById("drawType").value));
+       view.check_expression(document.getElementById("drawType").value);
     }
 	
 	function change_to_black(){
