--- a/App_Example/index.htm
+++ b/App_Example/index.htm
@@ -154,7 +154,7 @@
     </a>
 </div>
 
-<div class="panel-footer">Developed by: Jason Thomas, Telly Polychroniades, & Dr. William Sabados</div>
+<div class="panel-footer"></div>
 </div>
 <!-- Modal button one-->
 <div class="modal fade" id="myAlert" role="dialog">
