--- a/App_Example/index.htm
+++ b/App_Example/index.htm
@@ -142,7 +142,7 @@
     </section>
 
     <section>
-        <textarea id=console readonly rows="4" cols="100" wrap="soft"></textarea>
+        <textarea id=console readonly rows="4" cols="100" wrap="soft"> - Console -</textarea>
     </section>
 </div>
 
@@ -294,7 +294,8 @@
     };
 
     function error_submit(msg,console){
-		document.getElementById(console).value += msg + "\n";
+		document.getElementById(console).value += "\n" + msg;
+        document.getElementById(console).scrollTop = document.getElementById(console).scrollHeight;
  	}
 
 </script>
