--- a/App_Example/index.htm
+++ b/App_Example/index.htm
@@ -106,8 +106,8 @@
 		<input id="testt" type="text" class="checkbox" placeholder="error" aria-describedby="">
 	</div>-->
 	<div>
-	<section>
-        <textarea id=submit_error readonly rows="1" cols="65"></textarea>
+	<section style="padding-left: 24px;">
+        <textarea id=submit_error readonly rows="1" cols="65" style="width: 75%"></textarea>
     </section>
 	</div>
 	
@@ -121,37 +121,43 @@
                 <script src="./js/jointScript.js"></script>
             </div>
 
-            <div id="two"><h4 id="headSide1">ADD</h4><panel id="sideCanvas" >
-                <div class="btn-group btn-group-justified" id="bt1" role="group" aria-label="...">
-                    <div class="btn-group" id="dub" role="group">
-                        <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myAlert" > dbl neg </button>
+            <div id="two">
+                <panel id="sideCanvas">
+                    <h4 id="headSide1">ADD</h4>
+                    <div class="btn-group btn-group-justified" id="bt1" role="group" aria-label="...">
+                        <!--div class="btn-group" id="dub" role="group">
+                            <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myAlert"> dbl neg </button>
+                        </div-->
+                        <div class="btn-group" id="neg" role="group">
+                            <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal"> Negative </button>
+                        </div>
+                        <div class="btn-group" id="assert" role="group">
+                            <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal2"> Assert </button>
+                        </div>
                     </div>
-                    <div class="btn-group" id="neg" role="group">
-                        <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal" > negative </button>
+                    <hr>
+                    <h4 id="headSide2">REMOVE</h4>
+                    <div class="btn-group-vertical" id="btnRemove" role="group" aria-label="...">
+                        <button type="button" class="btn btn-info btn-lg" id="removeSubGraph">Remove Selected</button>
                     </div>
-                    <div class="btn-group" id="assert" role="group">
-                        <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal2" > assert </button>
+                    <hr>
+                    <h4 id="headSide2">MODIFY</h4>
+                    <div class="btn-group-vertical" role="group" aria-label="...">
+                        <button type="button" class="btn btn-info">Specialize (Negative Context)</button>
+                        <button type="button" class="btn btn-info">Generalize (Positive Context)</button>
+                        <button type="button" class="btn btn-info">Copy (Sub-Graph)</button>
+                        <button type="button" class="btn btn-info">Remove (Sub-Graph)</button>
+                        <button type="button" class="btn btn-info">2X Negative (Sub-Graph)</button>
+                        <button type="button" class="btn btn-info">Remove 2X (From Sub-Graph)</button>
                     </div>
-                </div>
-                <hr>
-                <h4 id="headSide2">MODIFY</h4><div class="btn-group-vertical" role="group" aria-label="...">
-                <button type="button" class="btn btn-info">Specialize (Negative Context)</button>
-                <button type="button" class="btn btn-info">Generalize (Positive Context)</button>
-                <button type="button" class="btn btn-info">Copy (Sub-Graph)</button>
-                <button type="button" class="btn btn-info" id="removeSubGraph">Remove (Sub-Graph)</button>
-                <button type="button" class="btn btn-info">2X Negative (Sub-Graph)</button>
-                <button type="button" class="btn btn-info">Remove 2X (From Sub-Graph)</button>
+                </panel>
             </div>
+        </section>
 
-            </panel>
-        </div>
-    </section>
-
-    <section>
-        <textarea id=console readonly rows="4" cols="100" wrap="soft"> - Console -</textarea>
-    </section>
-</div>
-
+        <section>
+            <textarea id=console readonly rows="4" cols="100" wrap="soft" style="width: 75%;"> - Console -</textarea>
+        </section>
+    </div>
 <!--br-->
 <div class="list-group">
     <a href="#" class="list-group-item active">
