--- a/App_Example/index.htm
+++ b/App_Example/index.htm
@@ -117,14 +117,11 @@
 
             <div id="two"><h4 id="headSide1" >ADD</h4><panel id="sideCanvas" >
                 <div class="btn-group btn-group-justified" id="bt1" role="group" aria-label="...">
-                    <div class="btn-group" id="dub" role="group">
-                        <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myAlert" > dbl neg </button>
-                    </div>
                     <div class="btn-group" id="neg" role="group">
-                        <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal" > negative </button>
+                        <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal" > Negative </button>
                     </div>
                     <div class="btn-group" id="assert" role="group">
-                        <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal2" > assert </button>
+                        <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal2" > Assertion </button>
                     </div>
                 </div>
                 <hr>
@@ -133,7 +130,7 @@
                 <button type="button" class="btn btn-info">Generalize (Positive Context)</button>
                 <button type="button" class="btn btn-info">Copy (Sub-Graph)</button>
                 <button type="button" class="btn btn-info" id="removeSubGraph">Remove (Sub-Graph)</button>
-                <button type="button" class="btn btn-info">2X Negative (Sub-Graph)</button>
+                <button type="button" class="btn btn-info" id = "doubleNegative">2X Negative (Sub-Graph)</button>
                 <button type="button" class="btn btn-info">Remove 2X (From Sub-Graph)</button>
             </div>
 
@@ -265,6 +262,16 @@
     document.getElementById("removeSubGraph").onclick = function(){
         view.removeCell()
     }
+    document.getElementById("doubleNegative").onclick = function(){
+        let x2 = model.addNegativeContext(getSelectionEgId());
+        model.addNegativeContext(x2);
+    }
+    document.getElementById("id_of_textbox")
+    .addEventListener("keyup", function(event) {
+    event.preventDefault();
+    if (event.keyCode == 13) {
+        document.getElementById("id_of_button").click();
+    }});
 
     function clearInput(input)
     {
