Clean up index.htm and EG_view.js

--- a/App_Example/index.htm
+++ b/App_Example/index.htm
@@ -296,6 +296,7 @@
     
     function clearArea()
     {
+        document.getElementById("drawType").value = "";
         view.EGclear();
         //UpdateFill();
     }
